<resources>
    <string name="app_name">Version Control Lab</string>
    <String name="enter_email">Enter Email</String>
    <string name="reEnter_email">Re Enter Email</string>
    <string name="enter_password">Enter passWord</string>
    <string name="re_enter_password">Re enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>