<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/enter_email"
        android:layout_margin="10dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/emailre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/reEnter_email"
        android:layout_margin="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/enter_password"
        android:layout_margin="10dp"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/passwordre"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/re_enter_password"
        android:layout_margin="10dp"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAlignment="center"/>


</LinearLayout>